form created and ready to send data to backend

--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,51 @@
-<p>login-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+  <h2>Sign in</h2>
+
+  <div
+    [ngClass]="{
+    invalid: form.get('email')?.touched && form.get('email')?.invalid
+    }"
+    class="form-control">
+    <label for="email">Email:</label>
+    <input id="email" type="email" formControlName="email">
+    <div
+      *ngIf="form.get('email')?.touched && form.get('email')?.invalid"
+      class="validation">
+      <small *ngIf="form.get('email')?.errors?.['email']">
+        Incorrect email
+      </small>
+      <small *ngIf="form.get('email')?.errors?.['required']">
+        Cannot be empty
+      </small>
+    </div>
+  </div>
+
+  <div
+    [ngClass]="{
+    invalid: form.get('password')?.touched && form.get('password')?.invalid
+    }"
+    class="form-control">
+    <label for="password">Pass:</label>
+    <input id="password" type="password" formControlName="password">
+    <div
+      *ngIf="form.get('password')?.touched && form.get('password')?.invalid"
+      class="validation">
+      <small *ngIf="form.get('password')?.errors?.['required']">
+        Cannot be empty
+      </small>
+      <small *ngIf="form.get('password')?.errors?.['minlength']">
+        Must be at least {{ form.get('password')?.errors?.['minlength']?.requiredLength }}
+        symbols long.
+        Its {{ form.get('password')?.errors?.['minlength']?.actualLength }} symbols long
+        now.
+      </small>
+    </div>
+  </div>
+
+  <button
+    [disabled]="form.invalid"
+    type="submit"
+    class="btn bg-primary"
+  >Apply
+  </button>
+</form>
