--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,18 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+
+    <button
+      routerLink="/"
+      class="btn btn-link">Home
+    </button>
+  </div>
+  <div class="info">
+    <strong>Author</strong>
+    <small>Date</small>
+  </div>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p>
+  </div>
+</div>
