auth logic is set to work with token

--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -43,9 +43,10 @@
   </div>
 
   <button
-    [disabled]="form.invalid"
+    [disabled]="form.invalid || submitted"
     type="submit"
     class="btn bg-primary"
-  >Apply
+  >
+    Apply
   </button>
 </form>
