--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,5 +1,12 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
-  <h2>Sign in</h2>
+  <h2>Log in</h2>
+
+  <div class="alert-danger" *ngIf="auth.error$ | async as error">
+    {{ error }}
+  </div>
+  <div class="alert-info" *ngIf="message">
+    {{ message }}
+  </div>
 
   <div
     [ngClass]="{
