Post creation form added

--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -3,7 +3,7 @@
 
   <div
     [ngClass]="{
-    invalid: form.get('email')?.touched && form.get('title')?.invalid
+    invalid: form.get('title')?.touched && form.get('title')?.invalid
     }"
     class="form-control">
     <label for="title">Title:</label>
