--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,45 @@
-<p>dashboard-page works!</p>
+<div *ngIf="posts.length; else loading">
+
+  <div class="form-control">
+    <input
+
+      type="text" placeholder="Search">
+  </div>
+
+  <table>
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>Autor</th>
+      <th>Title</th>
+      <th>Date</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let post of posts; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ post.author }}</td>
+      <td>{{ post.title }}</td>
+      <td>{{ post.date | date: 'medium' }}</td>
+      <td>
+        <button
+          [routerLink]="['/admin', 'post', post.id, 'edit']"
+          class="btn btn-link open"
+        >
+          Open
+        </button>
+
+        <a (click)="remove(post.id)">Delete</a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+
+<ng-template #loading>
+  <p class="text-center">
+    Loading...
+  </p>
+</ng-template>
