Post editing page added

--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -27,7 +27,7 @@
           [routerLink]="['/admin', 'post', post.id, 'edit']"
           class="btn btn-link open"
         >
-          Open
+          Edit
         </button>
 
         <a (click)="remove(post.id)">Delete</a>
