--- a/src/app/admin/edit-page/edit-page.component.html
+++ b/src/app/admin/edit-page/edit-page.component.html
@@ -1,1 +1,38 @@
-<p>edit-page works!</p>
+<div *ngIf="form; else loading">
+  <form
+    [formGroup]="form"
+    (ngSubmit)="submit()"
+  >
+    <div
+      [ngClass]="{
+    invalid: form.get('title')?.touched && form.get('title')?.invalid
+    }"
+      class="form-control">
+      <label for="title">Title:</label>
+      <input id="title" type="text" formControlName="title">
+      <div
+        *ngIf="form.get('title')?.touched && form.get('title')?.invalid"
+        class="validation">
+        <small *ngIf="form.get('title')?.errors?.['title']">
+          Add title!
+        </small>
+      </div>
+    </div>
+
+    <div class="form-control">
+      <quill-editor
+        formControlName="text"
+      ></quill-editor>
+    </div>
+
+    <button
+      [disabled]="form.invalid || submitted"
+      type="submit"
+      class="btn btn-primary"
+    >Done</button>
+  </form>
+</div>
+
+<ng-template #loading>
+  <p class="text-center">Loading...</p>
+</ng-template>
