--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -21,7 +21,7 @@
       <td>{{ i + 1 }}</td>
       <td>{{ post.author }}</td>
       <td>{{ post.title }}</td>
-      <td>{{ post.date | date: 'medium' }}</td>
+      <td>{{ post.date | date: 'medium':'null':'us' }}</td>
       <td>
         <button
           [routerLink]="['/admin', 'post', post.id, 'edit']"
