Main page post logic added

--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,18 +1,27 @@
-<div class="post">
-  <div class="header">
-    <h1>Post title</h1>
+<div
+*ngIf="post$ | async as post; else loading"
+>
+  <div class="post">
+    <div class="header">
+      <h1>{{post.title}}</h1>
 
-    <button
-      routerLink="/"
-      class="btn btn-link">Home
-    </button>
-  </div>
-  <div class="info">
-    <strong>Author</strong>
-    <small>Date</small>
-  </div>
-
-  <div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita iusto odit porro sunt unde ut veritatis, voluptatibus. Animi earum harum impedit labore magnam modi quo sit. Aliquam commodi consequuntur, cum delectus doloribus eligendi eos facere in, ipsum magnam rem reprehenderit soluta vel! Alias corporis laudantium, libero possimus rem voluptate!</p>
+      <button
+        routerLink="/"
+        class="btn btn-link">Home
+      </button>
+    </div>
+    <div class="info">
+      <strong>{{post.author}}</strong>
+      <small>{{post.date | date}}</small>
+    </div>
+    <div>
+      <quill-view-html [content]="post.text"></quill-view-html>
+    </div>
   </div>
 </div>
+
+<ng-template #loading>
+  <p class="text-center">
+    Loading...
+  </p>
+</ng-template>
